[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s2_image_downloader"
dynamic = ["version"]
description = "download Sentinel-2 scenes and create visualizations"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Joachim Ungar", email = "joachim.ungar@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "click"
]

[project.scripts]
letsfarm = "src.cli:main"

[project.urls]
Homepage = "hhttps://github.com/letsfarmafrica/s2_image_downloader"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
